--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -1,81 +1,135 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    height: 100vh;
-    background-color:hsl(36, 100%, 99%);
+	height: 100vh;
+	background-color: hsl(36, 100%, 99%);
+	display: grid;
+	justify-content: center;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 1fr 1fr 1fr 1fr 1fr 1fr;
-    margin: 10px;
-    
-
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 100px 1fr 150px 200px 1fr 160px 160px 160px;
+	min-width: 250px;
+	max-width: 420px;
+	padding: 15px;
 }
 
-.box {
-    border: 3px solid white;
-}
-
-nav.box {
-    position: relative;
-    /* display: grid; */
+nav {
+	position: relative;
 }
 
 .menu {
-    position: absolute;
-    top: calc(50%-50px);
-    right: 0%;
-    margin-right: 20px;
-    transform: scale(2.5);
-    
-}
-
-nav > img {
-       
+	position: absolute;
+	top: calc(50%-50px);
+	right: 0%;
+	margin-right: 20px;
+	transform: scale(2.5);
 }
 
 .img-hero {
-    height: 300px;
-    background-image: url("./assets/images/image-web-3-mobile.jpg");
-    background-position: center;
-    background-size: cover;
+	height: 300px;
+	background-image: url('./assets/images/image-web-3-mobile.jpg');
+	background-position: center;
+	background-size: cover;
 }
 
 .bright {
-
-    height: 300px;
-    
-
+	height: 150px;
 }
 .one {
-font-size: 36px;
+	font-size: 36px;
 }
 
 .two {
-
 }
 
 button {
-background-color: hsl(5, 85%, 63%);
-height: 40px;
-width: 170px;
-color: white;
-margin-top: 20px;
-border: none;
-text-transform: uppercase;
-letter-spacing: 4px;
-font-weight: bold;
-
+	background-color: hsl(5, 85%, 63%);
+	height: 45px;
+	width: 170px;
+	color: white;
+	margin-top: 20px;
+	border: none;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	font-weight: bold;
 }
 
 .new {
-    background-color: hsl(240, 100%, 5%);
+	background-color: hsl(240, 100%, 5%);
 }
 
+.new-title {
+	color: hsl(35, 77%, 62%);
+	font-weight: bold;
+}
 
+.new-first {
+	color: white;
+	font-weight: bold;
+}
+
+.new-second {
+	color: white;
+}
+
+.box {
+	display: flex;
+	height: 130px;
+	margin-top: 20px;
+}
+
+.img > img {
+	width: 100px;
+}
+
+@media (min-width: 900px) {
+	.container {
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 100px 300px 200px 160px;
+		grid-template-areas:
+			'nav nav nav'
+			'img img new'
+			'b b2 new'
+			'box1 box2 box3';
+		max-width: 1200px;
+	}
+
+	nav {
+		grid-area: nav;
+	}
+
+	.img-hero {
+		grid-area: img;
+	}
+
+	.new {
+		grid-area: new;
+	}
+
+	.one {
+		grid-area: b;
+	}
+
+	.two {
+		grid-area: b2;
+	}
+
+	.image-pc {
+		grid-area: box1;
+	}
+
+	.image-lap {
+		grid-area: box2;
+	}
+
+	.image-game {
+		grid-area: box3;
+	}
+}
