--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,134 +1,135 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
 body {
-    max-width: 1440px;
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    color: hsl(234, 12%, 34%);
-    background: hsl(0, 0%, 98%);
-    margin: 20px;
-    
+  max-width: 1440px;
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+  color: hsl(234, 12%, 34%);
+  background: hsl(0, 0%, 98%);
+  margin: 20px auto;
 }
 
 .smaller-text {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 .header {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .Boxcontainer {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
-    justify-content: center;
-    flex-wrap: wrap;
-    overflow-wrap: break-word;
-    flex-direction: row;
-    
-
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
+  flex-direction: row;
 }
 
 h1 b {
-    justify-content: center;
-    font-weight: 600;
-    
+  justify-content: center;
+  font-weight: 600;
 }
-h3 { 
-    font-weight: 400;
+h3 {
+  font-weight: 400;
 }
 
 p {
-    font-weight: 200;
+  font-weight: 200;
 }
 
 .box {
-    max-width: 400px;
-    min-height: 230px;
-    background-color: hsl(0, 0%, 98%);
-    border-radius: 2%;
-    padding: 25px;
-    position: relative;
-    box-shadow: 0px 0px 10px hsl(212, 86%, 64%);
-    overflow-wrap: break-word;
-    align-self: center;
-    flex-shrink: 0;
-    flex-grow: 0;
-}  
+  max-width: 400px;
+  min-height: 230px;
+  background-color: hsl(0, 0%, 98%);
+  border-radius: 2%;
+  padding: 25px;
+  position: relative;
+  box-shadow: 0px 0px 10px hsl(212, 86%, 64%);
+  overflow-wrap: break-word;
+  align-self: center;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
 
 .insideBox {
-    display: flex;
-    flex-direction: column;
-
+  display: flex;
+  flex-direction: column;
 }
 .picture {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
 
 .borderGreen {
-    border-top: 5px solid green;
-    margin: 20px;
-    width: 100%;
-    max-height: 100%;
+  border-top: 5px solid green;
+  margin: 20px;
+  width: 100%;
+  max-height: 100%;
 }
 
 .borderRed {
-    border-top: 5px solid red;
-    margin: 20px 20px 40px 20px;
-    width: 100%;
-    max-height: 100%;
+  border-top: 5px solid red;
+  margin: 20px 20px 40px 20px;
+  width: 100%;
+  max-height: 100%;
 }
 
 .borderOrange {
-    border-top: 5px solid orange;
-    margin: 20px 20px 40px 20px;
-    width: 100%;
-    max-height: 100%;
+  border-top: 5px solid orange;
+  margin: 20px 20px 40px 20px;
+  width: 100%;
+  max-height: 100%;
 }
 
 .borderBlue {
-    border-top: 5px solid blue;
-    margin: 20px;
-    width: 100%;
-    max-height: 100%;
-
+  border-top: 5px solid blue;
+  margin: 20px;
+  width: 100%;
+  max-height: 100%;
 }
 .BigColumn {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 375px) {
-    .box {
-        width: 100%;
-        font-size: 12px;
-        line-height: 1.5;
-    }
-    .Boxcontainer{
-        display: flex;
-        align-items: center;
-        padding: 20px;
-        justify-content: center;
-        flex-wrap: wrap;
-        overflow:scroll
-    }
-    .insideBox {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
+  .box {
+    width: 100%;
+    font-size: 12px;
+    line-height: 1.5;
+  }
+  .Boxcontainer {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    overflow: scroll;
+  }
+  .insideBox {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .smaller-text {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto 10px;
+  }
+  .header {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto 10px;
+  }
 }
