--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -1,116 +1,234 @@
-*{
-    font-family: 'Inter', sans-serif;
+* {
+    font-family: "Inter", sans-serif;
     padding: 0;
-    box-sizing: border-box; 
-    font-size: 15px; 
-    
-}
-
-body{
+    box-sizing: border-box;
+    font-size: 15px;
+  }
+  body {
     height: 100vh;
-    margin: 45px;
-}
-nav {
+    margin: 100px 100px;
+    justify-content: center;
+  }
+  nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-ul {
+  }
+  ul {
     display: flex;
     flex-direction: row;
     list-style: none;
     justify-content: flex-end;
     gap: 12px;
-}
-li{
-    margin: 2%
-}
-li:active{
+  }
+  li {
+    margin: 2%;
+  }
+  li:active {
     color: hsl(5, 85%, 63%);
-}
-li:hover{
+  }
+  li:hover {
     cursor: pointer;
-}
-div.hamburger{
+  }
+  div.hamburger {
     display: none;
     height: 65px;
-}
-i {
+  }
+  i {
     font-size: 45px;
-}
-
-h2{
-    color: hsl(35, 77%, 62%);
-    font-size: 2rem;
-}
-
-h3{
-    font-size: 1.5rem;
-}
-main{
+  }
+  main {
     display: grid;
-    grid-template-columns: repeat(3,1fr) ;
-    grid-template-rows:50% 25% 25%;  
-    column-gap: 30px ;
-    row-gap: 40px ;
-}
-.main-picture{
-    grid-row: 1/2 ;
-    grid-column: 1/3 ;
-}
-
-.main-content{
-    grid-row: 2/3 ;
-    grid-column: 1/2 ; 
-    justify-self: start;
-}
-
-.secondary-content{
-    grid-row: 2/3 ;
-    grid-column: 2/3 ;  
-}
- 
-
-.sidebar{
-    grid-row: 1/3 ;
-    grid-column: 3/4 ; 
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2fr 1fr auto);
+    column-gap: 30px;
+    row-gap: 40px;
+    justify-items: center;
+    margin-top: 20px;
+  }
+  .main-picture {
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+  .main-content {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .secondary-content {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .sidebar {
+    grid-row: 1/3;
+    grid-column: 3/4;
     background-color: hsl(240, 100%, 5%);
     color: white;
-    padding: 20px;
+    padding: 35px 25px 35px 25px;
+  }
+  .button {
+      display: flex;
+      justify-content: center;
+      width: 70%;
+      background-color: hsl(5, 85%, 63%);
+      color: white;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      text-align: center;
+      align-self: flex-end;
+     
+      
+  }
+  h1 {
+    font-size: 60px;
+    margin: 0;
+
+  }
+  .bar {
+    height: 1px;
+    background-color: white;
+    margin-top: 35px;
+  }
+  .sidebar h3 {
+    font-size: 20px;
+    margin-top: 35px;
+  }
+  h2 {
+    font-size: 35px;
+    color: hsl(35, 77%, 62%);
+    margin: 0;
+  }
+  .content-box-1 h3 {
+    font-weight: 700;
+  }
+  .bottom-main-content-1 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    display: flex;
+    
+    
+  }
+  .bottom-main-content-2 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    width: 100%;
+    display: flex;
+    height: auto;
+    
+  }
+  .bottom-main-content-3 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    width: 100%;
+    display: flex;
+  }
+  .number {
+    color: hsl(233, 8%, 79%);
+    margin-top:0 ;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+  .picture {
+    width: 100%;
+  }
+  .bottom-picture {
+    width: 200px;
+  }
+.picture-1{
+    height: 100%;
+}
+.picture-2{
+    height: 50%;
+    width: auto;
+}
+.picture-3{
+    height: 50%;
+    width: auto;
+}
+.picture-4{
+    height: 50%;
+    width: auto;
+}
+
+.secondary-content > p{
+    font-size: 1.5rem;;
+}
+
+h3 {
+    font-size: 1.5rem;
+    margin-top: 0;
+}
+
+p{
+   margin-bottom: 0;
+}
+
+.footer-box {
+    padding-left: 20px;
+    height: 140px;
+    
     
 }
-
-.bottom-main-content-1{
-    grid-row: 3/4 ;
-    grid-column: 1/4 ; 
-}
-.bottom-main-content-2{
-    grid-row: 3/4 ;
-    grid-column: 2/3 ; 
-}
-.bottom-main-content-3{
-    grid-row: 3/4 ;
-    grid-column: 3/4 ; 
-}
-.number{
-    color: hsl(233, 8%, 79%)
+.p-secondary-content{
+    margin-top: 0;
 }
 
-.picture{
-   width: 100px;
+.p-read-more{
+    margin: 15px 0px 15px 0px;
 }
 
-.picture-1{
-    width: 100%;
+.bottom-picture{
+    display:flex ;
+    justify-items: ;
 }
 
-@media screen and (max-width: 768px){
+  @media screen and (max-width: 1000px) {
     ul.nav-desktop {
-        display: none
+      display: none;
     }
     div.hamburger {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
     }
-}
+    main{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 60px;
+    }
+    .number{
+        font-size: 2rem;
+    }
+    .button{
+        margin-top: 20px;
+        width: 50%;
+    }
+
+    h1{
+        font-size: 4.5rem;
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  Message project-3-group-4
+  
+  
+  
+  
+  
+  
+  
+  
+  
