--- a/product-card/project.css
+++ b/product-card/project.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
-.card {
-    height: 100%;
-}
 
 p {
     font-family: 'Montserrat';
     font-size: 14px;
+    font-weight: 500;
 }
 body {
     background-color: hsl(30, 38%, 92%);
@@ -19,27 +17,30 @@ body {
 
 .container > img,
 .container > div {
-    width: 50%;
+    width: 300px;
 }
 
 .container > div {
-padding: 25px;
-border-radius: 0 5% 5% 0;
-background-color: white;
-display: flex;
-justify-content: space-between;
-flex-direction: column;
+    border-radius: 0 3% 3% 0;
+    padding: 30px 35px 35px 35px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 250px;
+    align-items: center;
 }
 
 img {
-    border-radius: 5% 0 0 5%;
+    border-radius: 3% 0 0 3%;
 }
 
 .container-wrapper {
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 @media (max-width: 500px) {
@@ -50,51 +51,57 @@ height: 100vh;
 
 button {
     background-color:  hsl(160, 81%, 14%);
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
     font-size: 13px;
-    padding: 13px 0;
+    padding: 15px 0;
     font-family: 'Montserrat';
     border: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 250px;
     
 }
 
 h1 {
     font-family: 'Fraunces';
-    line-height: 90%;
+    line-height: 100%;
+    font-size: 35px;
 }
 
 .third-paragraph {
     font-family: 'Fraunces';
     color: hsl(158, 36%, 37%);
-    font-size: 28px;
+    font-size: 32px;
     display: flex;
     align-items: center;
+    margin: 0;
     
 }
 
 button img {
     height: 14px;
     margin-right: 5%;
-    display: none;
 }
 
 s {
-    font-size: 10px;
-    margin-left: 10px;
+    font-size: 13px;
+    margin-left: 30px;
     color: hsl(213, 27%, 62%);
+    font-family: 'Montserrat';
 }
 
 .second-paragraph {
     line-height: 150%;
-    color: hsl(213, 27%, 62%)
+    color: hsl(213, 27%, 62%);
+    display: flex;
+    font-size: 15px;
 }
 
 .pr {
 color: hsl(213, 27%, 62%);
 letter-spacing: 4px;
-font-size: 10px;
+font-size: 13px;
+margin: 0;
 }
